Added an endpoint to download files and updated Swagger for it
