# src/routes/downloads.route.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const downloadsController = require('../controllers/downloads.controller.js');
+
+const downloadsRouter = express.Router();
+
+downloadsRouter.get('/video/:fileId', downloadsController.videoDownload);
+
+module.exports = downloadsRouter;
+
