# src/routes/index.js
@@ -5,11 +5,13 @@ const swaggerDocument = require('../../swagger.json');
 
 const editRouter = require('./edit.route');
 const uploadRouter = require('./uploads.route');
+const downloadsRouter = require('./downloads.route');
 
 const apiRouter = express.Router();
 
 apiRouter.use('/edit/video', editRouter);
 apiRouter.use('/uploads', uploadRouter);
+apiRouter.use('/downloads', downloadsRouter);
 
 apiRouter.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
